--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "knex": "^2.4.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "nodemon": "^2.0.22"
   }
 }
