--- a/server/.env.example
+++ b/server/.env.example
@@ -2,3 +2,5 @@ DB_USERNAME=<YOUR_DB_USERNAME>
 BD_PASSWORD=<YOUR_DB_PASSWORD>
 DB_NAME=<YOUR_DB_NAME>
 PORT=<YOUR_PORT>
+JWT_KEY=<YOUR_JWT_KEY>
+SALT_ROUNDS=<YOUR_SALT_ROUNDS>
