add typescript to Button, FormInput, PropertyPage

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -109,6 +109,8 @@
   "files": [
     "src/App.tsx",
     "./src/components/Footer/Footer.tsx",
+    "./src/components/Button/Button.tsx",
+    "./src/components/FormInput/FormInput.tsx",
     "./src/contexts/UserContext.tsx",
     "./src/contexts/UserContextProvider.tsx",
     "types.d.ts"
