--- a/server/package.json
+++ b/server/package.json
@@ -22,5 +22,10 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.0",
     "nodemon": "^2.0.22"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "typescript": "^5.1.6"
   }
 }
