--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,10 @@
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "typescript": "^5.1.6"
   }
 }
